{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 32,
  "lineage": "e3d5a6c3-8d4e-f956-4cdb-dca68c6eb8ce",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654579409:loadbalancer/app/technova-alb/b2fcbf0d07b33f62",
            "arn_suffix": "app/technova-alb/b2fcbf0d07b33f62",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "technova-alb-265745649.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654579409:loadbalancer/app/technova-alb/b2fcbf0d07b33f62",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "technova-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-01e36bf7d7a8f893f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c3c71194d548699b"
              },
              {
                "subnet_id": "subnet-0eacd8ea6eadc9154"
              }
            ],
            "subnets": [
              "subnet-0c3c71194d548699b",
              "subnet-0eacd8ea6eadc9154"
            ],
            "tags": {
              "Environment": "production",
              "Name": "technova-alb",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-alb",
              "Project": "technova"
            },
            "vpc_id": "vpc-08ca1429f9f833660",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654579409:loadbalancer/app/technova-alb/b2fcbf0d07b33f62"
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654579409:listener/app/technova-alb/b2fcbf0d07b33f62/fd85f5aa844f4970",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654579409:targetgroup/technova-tg/8adf066e6d079fe0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654579409:listener/app/technova-alb/b2fcbf0d07b33f62/fd85f5aa844f4970",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654654579409:loadbalancer/app/technova-alb/b2fcbf0d07b33f62",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "technova"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654579409:listener/app/technova-alb/b2fcbf0d07b33f62/fd85f5aa844f4970"
          },
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654579409:targetgroup/technova-tg/8adf066e6d079fe0",
            "arn_suffix": "targetgroup/technova-tg/8adf066e6d079fe0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654579409:targetgroup/technova-tg/8adf066e6d079fe0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654579409:loadbalancer/app/technova-alb/b2fcbf0d07b33f62"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "technova-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "technova-tg",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-tg",
              "Project": "technova"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654579409:targetgroup/technova-tg/8adf066e6d079fe0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7827dfb4750dd69",
            "arn": "arn:aws:ec2:us-east-1:654654579409:elastic-ip/eipalloc-0a7827dfb4750dd69",
            "association_id": "eipassoc-0e543b114297887df",
            "domain": "vpc",
            "id": "eipalloc-0a7827dfb4750dd69",
            "network_border_group": "us-east-1",
            "network_interface": "eni-052413dcdaf355bf9",
            "private_dns": "ip-10-0-51-142.ec2.internal",
            "private_ip": "10.0.51.142",
            "public_dns": "ec2-34-203-148-20.compute-1.amazonaws.com",
            "public_ip": "34.203.148.20",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "technova-nat-eip-1",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-nat-eip-1",
              "Project": "technova"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08626c7c68af988ff",
            "arn": "arn:aws:ec2:us-east-1:654654579409:elastic-ip/eipalloc-08626c7c68af988ff",
            "association_id": "eipassoc-0b2ded4a0dc2a6c07",
            "domain": "vpc",
            "id": "eipalloc-08626c7c68af988ff",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09318538904faebb4",
            "private_dns": "ip-10-0-92-49.ec2.internal",
            "private_ip": "10.0.92.49",
            "public_dns": "ec2-54-236-105-91.compute-1.amazonaws.com",
            "public_ip": "54.236.105.91",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "technova-nat-eip-2",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-nat-eip-2",
              "Project": "technova"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:internet-gateway/igw-0b98521fc8b6f2b47",
            "id": "igw-0b98521fc8b6f2b47",
            "owner_id": "654654579409",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "technova-igw",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-igw",
              "Project": "technova"
            },
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7827dfb4750dd69",
            "association_id": "eipassoc-0e543b114297887df",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0255ec2b31acce342",
            "network_interface_id": "eni-052413dcdaf355bf9",
            "private_ip": "10.0.51.142",
            "public_ip": "34.203.148.20",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c3c71194d548699b",
            "tags": {
              "Environment": "production",
              "Name": "technova-nat-1",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-nat-1",
              "Project": "technova"
            },
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08626c7c68af988ff",
            "association_id": "eipassoc-0b2ded4a0dc2a6c07",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d4df61bfc442d394",
            "network_interface_id": "eni-09318538904faebb4",
            "private_ip": "10.0.92.49",
            "public_ip": "54.236.105.91",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eacd8ea6eadc9154",
            "tags": {
              "Environment": "production",
              "Name": "technova-nat-2",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-nat-2",
              "Project": "technova"
            },
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:route-table/rtb-033de34a8a45f2448",
            "id": "rtb-033de34a8a45f2448",
            "owner_id": "654654579409",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0255ec2b31acce342",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "technova-private-rt-1",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-private-rt-1",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654579409",
            "id": "rtb-033de34a8a45f2448",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:route-table/rtb-002b114ac038820d2",
            "id": "rtb-002b114ac038820d2",
            "owner_id": "654654579409",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d4df61bfc442d394",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "technova-private-rt-2",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-private-rt-2",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654579409",
            "id": "rtb-002b114ac038820d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:route-table/rtb-07995bb2d39cc2b5a",
            "id": "rtb-07995bb2d39cc2b5a",
            "owner_id": "654654579409",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b98521fc8b6f2b47",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "technova-public-rt",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-public-rt",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654579409",
            "id": "rtb-07995bb2d39cc2b5a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0230cd84a34438897",
            "region": "us-east-1",
            "route_table_id": "rtb-033de34a8a45f2448",
            "subnet_id": "subnet-08a2814e182364c96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095517016efc03e9a",
            "region": "us-east-1",
            "route_table_id": "rtb-002b114ac038820d2",
            "subnet_id": "subnet-047085f403bf5612e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e25fa446173e6a4",
            "region": "us-east-1",
            "route_table_id": "rtb-07995bb2d39cc2b5a",
            "subnet_id": "subnet-0c3c71194d548699b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4d1a143273b66e8",
            "region": "us-east-1",
            "route_table_id": "rtb-07995bb2d39cc2b5a",
            "subnet_id": "subnet-0eacd8ea6eadc9154"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:security-group/sg-01e36bf7d7a8f893f",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e36bf7d7a8f893f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "technova-alb-sg",
            "name_prefix": "",
            "owner_id": "654654579409",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "technova-alb-sg",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-alb-sg",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654579409",
            "id": "sg-01e36bf7d7a8f893f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:security-group/sg-08e07bcdc9f81dd2e",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e07bcdc9f81dd2e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e36bf7d7a8f893f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e36bf7d7a8f893f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "technova-ec2-sg",
            "name_prefix": "",
            "owner_id": "654654579409",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "technova-ec2-sg",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-ec2-sg",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654579409",
            "id": "sg-08e07bcdc9f81dd2e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:subnet/subnet-08a2814e182364c96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a2814e182364c96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654579409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "technova-private-subnet-1",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-private-subnet-1",
              "Project": "technova"
            },
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654579409",
            "id": "subnet-08a2814e182364c96",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:subnet/subnet-047085f403bf5612e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047085f403bf5612e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654579409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "technova-private-subnet-2",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-private-subnet-2",
              "Project": "technova"
            },
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654579409",
            "id": "subnet-047085f403bf5612e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:subnet/subnet-0c3c71194d548699b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3c71194d548699b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654579409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "technova-public-subnet-1",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-public-subnet-1",
              "Project": "technova"
            },
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654579409",
            "id": "subnet-0c3c71194d548699b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:subnet/subnet-0eacd8ea6eadc9154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eacd8ea6eadc9154",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654579409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "technova-public-subnet-2",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-public-subnet-2",
              "Project": "technova"
            },
            "vpc_id": "vpc-08ca1429f9f833660"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654579409",
            "id": "subnet-0eacd8ea6eadc9154",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654579409:vpc/vpc-08ca1429f9f833660",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f85533340a049c4d",
            "default_route_table_id": "rtb-02ee79502b411b1c3",
            "default_security_group_id": "sg-072c2b1f9319a95ea",
            "dhcp_options_id": "dopt-061db3303941f0d61",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ca1429f9f833660",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ee79502b411b1c3",
            "owner_id": "654654579409",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "technova-vpc",
              "Project": "technova"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "technova-vpc",
              "Project": "technova"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654579409",
            "id": "vpc-08ca1429f9f833660",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}